# hermes-desktop

./: .env.example  .gitignore  PRODUCT.md  UI-UX-DESIGN-SPEC.md  UI-UX-REVIEW.md  commit.sh  index.html  overlay.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.hermes/plans/: hermes-desktop-test-plan.md
src/: App.css  App.tsx  index.css  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  overlay.rs  snap.rs
src/__tests__/: AgentSelector.test.tsx  AttachmentChip.test.tsx  ChatInput.test.tsx  ChatPage.test.tsx  CommandPalette.test.tsx  CompressButton.test.tsx  ConnectionConfigPage.test.tsx  DropZone.test.tsx  FolderItem.test.tsx  ForkDialog.test.tsx  MessageBubble.test.tsx  ModelPicker.test.tsx  SSE-parser.test.ts  SessionItem.test.tsx  SessionList.test.tsx  StatusBar.test.tsx  TagBadge.test.tsx  TagPicker.test.tsx  blocks.test.tsx  connection-store.test.ts  flow-agent-model-selection.test.tsx  flow-chat-lifecycle.test.tsx  flow-command-palette.test.tsx  flow-connection.test.tsx  flow-file-attachment.test.tsx  flow-folder-tag-organization.test.tsx  flow-session-management.test.tsx  flow-theme-layout.test.tsx  gateway-api-integration.test.ts  gateway-api.test.ts  keyboard-navigation.test.tsx  layout.test.tsx  minimalism-e2e-flows.test.tsx  minimalism-overlay.test.tsx  quick-access.test.tsx  screen-share-api.test.ts  screen-share.test.tsx  setup.ts  spaces.test.tsx  today-view.test.tsx  (+11 more)
src/hooks/: use-agent-notifications.ts  use-auto-updater.ts  (+7 more)
(+82 files in other folders)
