[package]
name = "hermes-desktop"
version = "0.1.0"
description = "Hermes Desktop - Native client for Hermes Agent Gateway"
authors = ["Maxxoto"]
edition = "2021"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-tray = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
